# remir

./: Cargo.toml  README.md
benches/: Cargo.toml
benches/benches/: llvm.rs  remir.rs
remir/: Cargo.toml
remir/src/: errs.rs  func.rs  insts.rs  lazy_pass.rs  lib.rs  misc.rs  module.rs  writer.rs
remir/src/attributes/: mod.rs
remir/src/block/: mod.rs  resolver.rs  sync.rs  vars.rs
remir/src/builders/: atomic.rs  branches.rs  cmp.rs  consts.rs  func.rs  hints.rs  lazy.rs  math.rs  mem.rs  mod.rs  regs.rs  vals.rs
remir/src/fmt/: blocks.rs  func.rs  insts.rs  mod.rs  utils.rs  vals.rs
remir/src/utils/: atomic.rs  math.rs  mod.rs  operators.rs
remir/src/values/: array.rs  consts.rs  float.rs  int.rs  mod.rs  ptr.rs  structs.rs  types.rs
remir_llvm/: Cargo.toml
remir_llvm/src/: lib.rs  types.rs  utils.rs
remir_llvm/src/inst/: atomic.rs  branches.rs  cmp.rs  consts.rs  funcs.rs  hints.rs  math.rs  mem.rs  mod.rs  regs.rs  structs.rs  vals.rs
