[package]
name = "remir"
version = "1.0.1"
authors = ["Zffu <zffu@zffu.dev>"]
description = "Remir is an MIR library designed to be used easily and be efficient."
repository = "https://github.com/Zffu/remir"
readme = "../README.md"
keywords = ["mir", "language"]
license = "MIT"
categories = ["compilers"]
edition = "2024"

[features]
default = ["fmt", "errors"]

fmt = []
errors = []

[dependencies]
